--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reservAI</title>
+    <title>wAItless</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>Welcome to reservAI</h1>
+    <h1>Welcome to wAItless</h1>
     <p>Reduce Wait Times, Enhance Experience</p>
-    <form id="predictForm">
-        <input type="number" id="data" placeholder="Enter a value">
-        <button type="submit">Predict Wait Time</button>
+    <form id="checkinForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="phone_number">Phone Number:</label>
+        <input type="tel" id="phone_number" name="phone_number" required>
+        <button type="submit">Check In</button>
     </form>
-    <p id="predictionResult"></p>
+    <p id="ticketResult"></p>
     <script>
-        document.getElementById('predictForm').addEventListener('submit', function(e) {
+        document.getElementById('checkinForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            const data = document.getElementById('data').value;
-            fetch('/predict', {
+            const formData = new FormData(this);
+            fetch('/checkin', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ data: parseInt(data) }),
+                body: formData
             })
             .then(response => response.json())
             .then(result => {
-                document.getElementById('predictionResult').innerText = `Predicted Wait Time: ${result.prediction}`;
+                document.getElementById('ticketResult').innerText = `Your ticket number is: ${result.ticket_number}`;
             });
         });
     </script>
