--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>Welcome to wAItless</h1>
+    <h1>Welcome to w<strong color='green'>AI</strong>tless</h1>
     <p>Reduce Wait Times, Enhance Experience</p>
     <form id="checkinForm">
         <label for="name">Name:</label>
