gradient color change

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to w<strong style="color:green">AI</strong>tless</h1>
-    <p>Reduce Wait Times, Enhance Experience</p>
+    <h2>Reduce Wait Times, Enhance Experience</h2>
     <form id="checkinForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
@@ -20,7 +20,7 @@
     </form>
     <p id="ticketResult"></p>
 
-    <form id="predictForm">
+    <!--form id="predictForm">
         <label for="num_people">Number of People:</label>
         <input type="number" id="num_people" name="num_people" min="1" required>
         <label for="time_of_day">Time of Day (24-hour format):</label>
@@ -29,7 +29,7 @@
         <input type="number" id="day_of_week" name="day_of_week" min="1" max="7" required>
         <button type="submit">Predict Wait Time</button>
     </form>
-    <p id="predictionResult"></p>
+    <p id="predictionResult"></p-->
 
     <script>
         document.getElementById('checkinForm').addEventListener('submit', function(e) {
