--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,7 +4,9 @@ html, body {
 }
 
 body {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(74deg, #441a8d, #a21897);
+    font-family: 'Inconsolata', monospace;
+    color: rgb(205, 203, 203);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     font-family: Arial, sans-serif;
