--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wAItless</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
     <h1>Welcome to w<strong style="color:green">AI</strong>tless</h1>
-    <h2>Reduce Wait Times, Enhance Experience</h2>
+    <h2 style="font-family:Montserrat">Reduce Wait Times, Enhance Experience</h2>
     <form id="checkinForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
