--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Welcome to w<strong style="color:green">AI</strong>tless</h1>
-    <h2 style="font-family:Montserrat">Reduce W<strong style:"color:green">ai</strong>t Times, Enhance Experience</h2>
+    <h2 style="font-family:Montserrat">Reduce W<strong style="color:green">ai</strong>t Times, Enhance Experience</h2>
     <form id="checkinForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
