--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
     </form>
     <p id="ticketResult"></p>
 
-    form id="predictForm">
+    <form id="predictForm">
         <label for="num_people">Number of People:</label>
         <input type="number" id="num_people" name="num_people" min="1" required>
         <label for="time_of_day">Time of Day (24-hour format):</label>
